# refmem

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
refmem/: refmem.c  refmem.h  refmem_allocator.c  refmem_allocator.h  refmem_allocator_apr_pools.c  refmem_allocator_default.c  refmem_allocator_system.c  refmem_atomic.c  refmem_atomic.h  refmem_object.h  refmem_private.h  refmemm.c  refmemm.h  refmemm_allocator.c  refmemm_allocator.h
refmem-1/: refmem.c  refmem.h  refmem_atomic.c  refmem_atomic.h  refmem_private.h  refmem_wrapper.c  refmem_wrapper.h  refmemm.c  refmemm.h  refmemm_allocator_system.c
test/: include.am  test-object.c  test-object.h  test-refmem-allocator-apr-pools.c  test-refmem-object.c  test-refmem-struct.c  test-refmem.c
